<resources>
    <string name="app_name">Scavenger\'s World</string>
    <string name="log_onCreate" translatable="false">+ onCreate() +</string>
    <string name="log_onStart" translatable="false">++ onStart() ++</string>
    <string name="log_onResume" translatable="false">+++ onResume() +++</string>
    <string name="log_onPause" translatable="false">--- onPause() ---</string>
    <string name="log_onStop" translatable="false">-- onStop() --</string>
    <string name="log_onDestroy" translatable="false">- onDestroy() -</string>
    <string name="log_onRestart" translatable="false">* onRestart() *</string>
    <string name="facebook_app_id" translatable="false">566074280252089</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb566074280252089</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="server_client_id" translatable="false">435212579805-gvug6do3kbp6q6dkuchsa27u367sbj7p.apps.googleusercontent.com</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_error_title">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="decline">Decline</string>
    <string name="eula"><p>By using this app, you agree to abide by the <a href="https://developers.google.com/maps/terms">Google Maps Terms of Service</a> and <a href="https://www.google.com/intl/en/policies/terms/">Google\'s Terms of Service</a>.</p><p><strong>Privacy Policy:</strong> Upon request, this app uses your location in order to show it via Google Maps. Internet access permission is necessary for this purpose. No other information is collected, stored, or transmitted.</p></string>
    <string name="eula_accepted_key" translatable="false">eula_accepted</string>
    <string name="get_location">Get Current Location</string>
    <string name="title_activity_modify_clue_location">Map</string>
    <string name="about_app">About Scavenger\'s World</string>
    <string name="prefs" translatable="false">Prefs</string>
    <string name="mylocation_button" translatable="false">My Location Button</string>
    <string name="mylocation_layer" translatable="false">My Location Layer</string>
    <string name="scroll" translatable="false">Scroll Gestures</string>
    <string name="tilt" translatable="false">Tilt Gestures</string>
    <string name="rotation" translatable="false">Rotation:</string>
    <string name="rotate" translatable="false">Rotate Gestures</string>
    <string name="zoom_gestures" translatable="false">Zoom Gestures</string>
    <string name="zoom_buttons" translatable="false">Zoom Buttons</string>
    <string name="compass">Compass</string>
    <string name="map_not_ready">Map is not ready yet</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="title_activity_game_play">Map</string>
    <string name="solve_clue">Solve Clue</string>
    <string name="show_clues">Show Clues</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="location">Location</string>
    <string name="beacon">Beacon</string>
    <string name="edit_location">Edit Location</string>
    <string name="edit_beacon_id">Edit Beacon String</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="facebookLogin">Log in with Facebook</string>
    <string name="googleLogin">Log in with Google</string>
    <string name="loginUsername">Email</string>
    <string name="loginPassword">Password</string>
    <string name="login">Login</string>
    <string name="invalidEmailMessage">Please enter a valid email address</string>
    <string name="invalidEmailTitle">Invalid Email Address</string>
    <string name="passwordMismatch">Password Mismatch</string>
    <string name="passwordMismatchMessage">Please make sure that both the passwords are same.</string>
    <string name="enterUsernameTitle">Invalid Username</string>
    <string name="enterUsernameMessage">Please enter Username</string>
    <string name="passwordNotEnteredTitle">Enter Password</string>
    <string name="passwordNotEnteredMessage">Please enter a valid password</string>
    <string name="googleLoginFailedTitle">Error in login</string>
    <string name="googleLoginFailedMessage">Failed to login with Google Account</string>
    <string name="loginFailedMessage">Invalid email and password combination</string>
    <string name="loginTab">Login</string>
    <string name="signupTab">SignUp</string>
    <string name="USER">USER</string>
    <string name="signout">Sign Out</string>
    <string name="createdHuntsTab">Created Hunts</string>
    <string name="joinedHuntsTab">Your Hunts</string>
    <string name="welcomeMessage">Hello\u0020</string>
    <string name="progressMessage">Progress: </string>
    <string name="join_hunt">Join Hunt</string>
    <string name="gameplay">Gameplay</string>
    <string name="profile_header">Player Stats</string>
    <string name="profile_point">Points Earned: </string>
    <string name="profile_badge">Badges Earned: </string>
    <string name="profile_completed">Hunts Completed: </string>
    <string name="profile_joined">Hunts Joined: </string>
    <string name="profile_temp">Nothing to show.</string>
    <string name="notifications_header">Notifications</string>
    <string name="notifications_temp">Nothing to show.</string>
    <string name="hunt_join">Join Hunt</string>
    <string name="view_clues">View Hunt Clues</string>
    <string name="update_hunt">Update Hunt</string>
    <string name="request_hunt">Request to Join</string>
    <string name="hunt_leaders">View Leader Board</string>
    <string name="requestToJoin">\u0020has requested to join\u0020</string>
    <string name="huntUpdate">Please select a hunt to update</string>
    <string name="Error">Error</string>
    <string name="requestSent">Request Sent</string>
    <string name="requestPending">Request Pending</string>
    <string name="hunt_name">Hunt Name</string>
    <string name="hunt_description">Hunt Description...</string>
    <string name="start_time">Start Time</string>
    <string name="start_date">Start Date</string>
    <string name="end_time">End Time</string>
    <string name="end_date">End Date</string>
    <string name="select_time">Select Time</string>
    <string name="select_date" translatable="false">Select Date</string>
    <string name="clues">Clues</string>
    <string name="edit_clue">Edit Clue</string>
    <string name="private_event">Private Event?</string>
    <string name="save_button">Save Hunt</string>
    <string name="duplicateHunt">Hunt with the given name already exists. Please modify the name of the hunt and save again</string>
    <string name="start_date_warning">Start Date must be before End Date</string>
    <string name="end_date_warning">End Date must be after Start Date</string>
    <string name="leaderboard_header">Leaderboard</string>
    <string name="leaderboard_temp">Nothing to show.</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="newHuntName">New Hunt</string>
    <string name="userToHunts" translatable="false">user-hunts</string>
    <string name="huntsToClues" translatable="false">hunts-clues</string>
    <string name="huntsToLeaders" translatable="false">hunt-leaderboard</string>
    <string name="userToDeviceId" translatable="false">user-deviceid</string>
    <string name="orderByHuntId" translatable="false">huntId</string>
    <string name="orderByHuntName" translatable="false">huntName</string>
    <string name="orderByProgress" translatable="false">progress</string>
    <string name="searchableHuntsTable" translatable="false">searchable-hunts</string>
    <string name="userToProfile" translatable="false">user-profile</string>
    <string name="allHuntsTableRef" translatable="false">allhunts</string>
    <string name="clueId" translatable="false">clueId</string>
    <string name="currentClueSequence" translatable="false">currentClueSequence</string>
    <string name="progress">progress</string>
    <string name="score">score</string>
    <string name="hunts" translatable="false">hunts</string>
    <string name="huntsTable" translatable="false">hunts</string>
    <string name="orderByNumPlayers" translatable="false">numberOfPlayers</string>
    <string name="pendingRequests" translatable="false">pendingRequests</string>
    <string name="pathSeparator" translatable="false">/</string>
    <string name="allFeeds">All</string>
    <string name="popularFeeds">Popular</string>
    <string name="huntKey" translatable="false">OPENHUNTSCREEN</string>
    <string name="title_activity_search_preference" translatable="false">SearchPreferenceActivity</string>
    <string name="escapeChar" translatable="false">\uf8ff</string>
    <string name="cityName" translatable="false">cityName</string>
    <string name="showPrivateHunts" translatable="false">showPrivateHunts</string>
    <string name="maxRadius" translatable="false">maxRadius</string>
    <string name="clue_feedback_success">Correct! You have solved the clue.</string>
    <string name="clue_feedback_hunt_complete">Congrats! You have successfully completed the hunt</string>
    <string name="clue_feedback_failure">Sorry, you are not in the correct location for this clue.</string>
    <string name="clue_feedback_gameplay">Return to Game Screen</string>
    <string name="addClue_name">Clue Name</string>
    <string name="addClue_description">Clue Description</string>
    <string name="addClue_landmark">Landmark Description</string>
    <string name="add_clue">Add Clue</string>
    <string name="modify_clue">Modify Clue</string>
    <string name="modify_location">Modify Location</string>
    <string name="back_to_hunt_screen">Back to Hunt Screen</string>
    <string name="hunt_state" translatable="false">state</string>
    <string name="notificationRequestTitle">New User Request</string>
    <string name="notificationApprovalTitle">Request approved</string>
    <string name="notificationDeclineTitle">Request declined</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="huntNameKey" translatable="false">huntName</string>
    <string name="huntDescKey" translatable="false">huntDesc</string>
    <string name="huntPrivateKey" translatable="false">huntPrivate</string>
    <string name="clueListKey" translatable="false">clueList</string>
</resources>