<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_clue_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.aj.scavengersworld.ClueInfoActivity"
    android:weightSum="1">

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_weight="0.08" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Name"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_weight="0.08" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Description"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_weight="0.08"
        android:hint="Clue Name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Landmark info"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_weight="0.08" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_weight="1" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/latitudeLabel"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/longitude"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/textView7"
            android:layout_weight="1" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/longitudeLabel"
            android:layout_weight="1" />
    </LinearLayout>
    <Button
        android:text="@string/edit_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editLocationButton" />

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:layout_weight="0.44">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:text="@string/location"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:text="@string/beacon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>
