<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hunt_create_modify"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.aj.scavengersworld.HuntCreateModify">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/editText4" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/start_time"
            android:layout_height="match_parent"
            android:id="@+id/textView4"
            android:layout_width="150dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/editText5"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/end_time"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:id="@+id/textView6" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/editText6"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/public_event"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:id="@+id/textView8" />

        <ToggleButton
            android:text="ToggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toggleButton"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:text="@string/clues"
        android:layout_width="match_parent"
        android:id="@+id/textView"
        android:layout_height="50dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:text="Clue1"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:id="@+id/textView9" />

        <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clueEditButton"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
